src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>ATO_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATO Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accounting_Rule_ID__c</fullName>
        <label>Accounting Rule ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agile_Life_Cycle__c</fullName>
        <label>Agile Life Cycle</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Opportunity_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Opportunity Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Order_Enabled_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Order Enabled Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <label>Division Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Item_Id__c</fullName>
        <label>Inventory Item Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Service_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Service Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Group_Code__c</fullName>
        <label>Item Group Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Group__c</fullName>
        <description>Zebra Item Group Description</description>
        <label>Item Group</label>
        <picklist>
            <picklistValues>
                <fullName>105SL Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110 PAX4 Print Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110Xi4 Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110XiIII Plus Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>140Xi4 Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>170 PAX4 Print Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>170XiIII Plus Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220Xi4 Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barcode Supplies Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar Code Training Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAG Development Prof Svcs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Cleaning Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Laminates / Holograms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Maintenance Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Media Kits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Printer Service Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Printhead Maint Kits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Ribbons YMCKO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card RM Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Upgrade Kits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connectivity Wired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connectivity Wireless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Desktop Ribbons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Ribbon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop Maint/Upgrade Kits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop Printer Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop Printhead Maint Kits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop RM Parts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Orderable_SKU__c</fullName>
        <description>This Flag decides if the Opportunity Product can be added to the Opportunity if it is Orderable or Customer Enabled Flag is true</description>
        <formula>IF(OR(Allow_Opportunity_Flag__c, Customer_Order_Enabled_Flag__c),true,false)</formula>
        <label>Orderable SKU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_ID__c</fullName>
        <label>Organization ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_UOM__c</fullName>
        <description>Primary Unit of Measure</description>
        <inlineHelpText>Primary Unit of Measure</inlineHelpText>
        <label>Primary UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pack</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <label>Product Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Conversion_Source__c</fullName>
        <description>This field identifies if a product SKU is from MSI SFDC or Zebra</description>
        <label>Product Conversion Source</label>
        <picklist>
            <picklistValues>
                <fullName>EVM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Family_View__c</fullName>
        <formula>Item_Group_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Sub Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Family__c</fullName>
        <label>Product Sub Family</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Line__c</fullName>
        <label>Product Sub Line</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Product Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Level_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field Identifies if a Product Entry is SKU level or NOT. If unchecked it shall be identified as a Family Level Product. This may NOT be required if we store all Product Family Entries in a separate custom object.</description>
        <label>SKU Level Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serialized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Serialized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Enabled_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stock Enabled Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Structure_Type__c</fullName>
        <label>Structure Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Prod_Line__c</fullName>
        <label>Sub Prod Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Item_Type__c</fullName>
        <label>User Item Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight_UOM__c</fullName>
        <label>Weight UOM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZEBModel_Name__c</fullName>
        <label>Model Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_Organization_Image__c</fullName>
        <formula>IF( Division_Name__c = &apos;Zebra NALA&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015i0000004EE8p&amp;oid=00D560000008iX6&quot;, &quot;Zebra NALA&quot;),  
 IF( Division_Name__c = &apos;Zebra EMEA&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015i0000004EE99&amp;oid=00D560000008iX6&quot;, &quot;Zebra EMEA&quot;), IF( Division_Name__c = &apos;Zebra APAC USD&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015i0000004EE9J&amp;oid=00D560000008iX6&quot;, &quot;Zebra APAC USD&quot;), IF( Division_Name__c = &apos;Zebra APAC RMB&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015i0000004EE9d&amp;oid=00D560000008iX6&quot;, &quot;Zebra APAC RMB&quot;), null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_Product_Family__c</fullName>
        <description>Custom, non-picklist field used to store Zebra Product Family.</description>
        <label>Product Family</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__FolderId__c</fullName>
        <label>FolderId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Hardware_Products</fullName>
        <active>true</active>
        <description>This Record type is for hardware products.</description>
        <label>Hardware Products</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Products</fullName>
        <active>true</active>
        <description>This Record type is for Service products.</description>
        <label>Service Products</label>
    </recordTypes>
</CustomObject>